--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -406,28 +406,21 @@ jobs:
   cleanup:
     docker:
       - image: cimg/base:stable
-    parameters:
-      Old_WORKFLOW_ID:
-        type: string
-        default: $(curl   https://kvdb.io/JeKSH41hhLLsFDYSSchKwz/WorkflowID )
     steps:
       - checkout
       - aws-cli/setup
       - node/install:
           node-version: '13.8.0'
       - run:
-          name: Get old list of stacks and workflowId
+          name: Remove old stacks and files
           command: |
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
               --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
 
             export OldWorkflowID=$(curl   https://kvdb.io/JeKSH41hhLLsFDYSSchKwz/WorkflowID )
-            echo Old WorkFlow Id: "<<parameters.Old_WORKFLOW_ID>>"
+            echo Old WorkFlow Id: "${OldWorkflowID}"
             echo Stack Name: "${STACKS[@]}"
 
-      - run:
-          name: Remove old stacks and files
-          command: |
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
               aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
