--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "frontend:build": "cd frontend && npm run build",
         "frontend:test": "cd frontend &&  npm run  test",
         "backend:test": "cd backend &&  npm run  test",
-        "frontend:audit": "cd frontend && npm audit",
-        "backend:audit": "cd backend  && npm audit fix --audit-level=critical --force && npm audit fix --audit-level=critical --force  && npm audit --audit-level=critical ",
+        "frontend:audit": "cd frontend && npm audit fix --audit-level=critical --force && npm audit --audit-level=critical ",
+        "backend:audit": "cd backend  && npm install && npm audit",
         "migration:backend": "cd backend &&  npm run migrations",
         "backend:migrations:revert": "cd backend && npm run migrations:revert",
         "frontend:deploy" : " cd frontend && npm run build &&  npm run deploy"
